// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select styled components Basic render: StyledClearIcon has correct default styles 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledClearIcon has correct styles for the SIZE.compact 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledClearIcon has correct styles for the TYPE.search 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledClearIcon has correct styles for the disabled state 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledControlContainer has correct default styles 1`] = `
Object {
  "backgroundColor": "$theme.colors.inputFill",
  "borderColor": "$theme.colors.inputFill",
  "borderRadius": "$theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.foreground",
  "cursor": "pointer",
  "display": "flex",
  "justifyContent": "space-between",
  "overflow": "hidden",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Select styled components Basic render: StyledControlContainer has correct styles for the SIZE.compact 1`] = `
Object {
  "backgroundColor": "$theme.colors.inputFill",
  "borderColor": "$theme.colors.inputFill",
  "borderRadius": "$theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.foreground",
  "cursor": "pointer",
  "display": "flex",
  "justifyContent": "space-between",
  "overflow": "hidden",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Select styled components Basic render: StyledControlContainer has correct styles for the TYPE.search 1`] = `
Object {
  "backgroundColor": "$theme.colors.inputFill",
  "borderColor": "$theme.colors.inputFill",
  "borderRadius": "$theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.foreground",
  "cursor": "text",
  "display": "flex",
  "justifyContent": "space-between",
  "overflow": "hidden",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Select styled components Basic render: StyledControlContainer has correct styles for the disabled state 1`] = `
Object {
  "backgroundColor": "$theme.colors.inputFillDisabled",
  "borderColor": "$theme.colors.inputFillDisabled",
  "borderRadius": "$theme.sizing.scale100",
  "borderStyle": "solid",
  "borderWidth": "1px",
  "boxShadow": "0 2px 6px transparent",
  "boxSizing": "border-box",
  "color": "$theme.colors.inputTextDisabled",
  "cursor": "not-allowed",
  "display": "flex",
  "justifyContent": "space-between",
  "overflow": "hidden",
  "transitionDuration": "$theme.animation.timing100",
  "transitionProperty": "border, boxShadow, backgroundColor",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "width": "100%",
}
`;

exports[`Select styled components Basic render: StyledInput has correct default styles 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "boxSizing": "content-box",
  "display": "inline-block",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "width": "1px",
}
`;

exports[`Select styled components Basic render: StyledInput has correct styles for the SIZE.compact 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "boxSizing": "content-box",
  "display": "inline-block",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "width": "1px",
}
`;

exports[`Select styled components Basic render: StyledInput has correct styles for the TYPE.search 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "boxSizing": "content-box",
  "display": "inline-block",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "width": "1px",
}
`;

exports[`Select styled components Basic render: StyledInput has correct styles for the disabled state 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "boxSizing": "content-box",
  "display": "inline-block",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "width": "1px",
}
`;

exports[`Select styled components Basic render: StyledInputContainer has correct default styles 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "display": "inline-block",
  "height": "$theme.typography.font300.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledInputContainer has correct styles for the SIZE.compact 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "display": "inline-block",
  "height": "$theme.typography.font200.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledInputContainer has correct styles for the TYPE.search 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "display": "inline-block",
  "height": "$theme.typography.font300.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledInputContainer has correct styles for the disabled state 1`] = `
Object {
  "background": "transparent",
  "border": "none",
  "boxShadow": "none",
  "display": "inline-block",
  "height": "$theme.typography.font300.lineHeight",
  "marginBottom": "0",
  "marginLeft": "0",
  "marginRight": "0",
  "marginTop": "0",
  "maxWidth": "100%",
  "outline": "none",
  "paddingBottom": "0",
  "paddingLeft": "0",
  "paddingRight": "0",
  "paddingTop": "0",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledInputSizer has correct default styles 1`] = `
Object {
  "height": 0,
  "left": 0,
  "overflow": "scroll",
  "position": "absolute",
  "top": 0,
  "visibility": "hidden",
  "whiteSpace": "pre",
}
`;

exports[`Select styled components Basic render: StyledInputSizer has correct styles for the SIZE.compact 1`] = `
Object {
  "height": 0,
  "left": 0,
  "overflow": "scroll",
  "position": "absolute",
  "top": 0,
  "visibility": "hidden",
  "whiteSpace": "pre",
}
`;

exports[`Select styled components Basic render: StyledInputSizer has correct styles for the TYPE.search 1`] = `
Object {
  "height": 0,
  "left": 0,
  "overflow": "scroll",
  "position": "absolute",
  "top": 0,
  "visibility": "hidden",
  "whiteSpace": "pre",
}
`;

exports[`Select styled components Basic render: StyledInputSizer has correct styles for the disabled state 1`] = `
Object {
  "height": 0,
  "left": 0,
  "overflow": "scroll",
  "position": "absolute",
  "top": 0,
  "visibility": "hidden",
  "whiteSpace": "pre",
}
`;

exports[`Select styled components Basic render: StyledOptionContent has correct default styles 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "cursor": "pointer",
  "fontWeight": "normal",
}
`;

exports[`Select styled components Basic render: StyledOptionContent has correct styles for the SIZE.compact 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "cursor": "pointer",
  "fontWeight": "normal",
}
`;

exports[`Select styled components Basic render: StyledOptionContent has correct styles for the TYPE.search 1`] = `
Object {
  "color": "$theme.colors.foreground",
  "cursor": "pointer",
  "fontWeight": "normal",
}
`;

exports[`Select styled components Basic render: StyledOptionContent has correct styles for the disabled state 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "not-allowed",
  "fontWeight": "normal",
}
`;

exports[`Select styled components Basic render: StyledPlaceholder has correct default styles 1`] = `
Object {
  "bottom": "0",
  "color": "$theme.colors.foregroundAlt",
  "left": "0",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "absolute",
  "right": "0",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
}
`;

exports[`Select styled components Basic render: StyledPlaceholder has correct styles for the SIZE.compact 1`] = `
Object {
  "bottom": "0",
  "color": "$theme.colors.foregroundAlt",
  "left": "0",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale200",
  "position": "absolute",
  "right": "0",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
}
`;

exports[`Select styled components Basic render: StyledPlaceholder has correct styles for the TYPE.search 1`] = `
Object {
  "bottom": "0",
  "color": "$theme.colors.foregroundAlt",
  "left": "0",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale1000",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "absolute",
  "right": "0",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
}
`;

exports[`Select styled components Basic render: StyledPlaceholder has correct styles for the disabled state 1`] = `
Object {
  "bottom": "0",
  "color": "$theme.colors.inputTextDisabled",
  "left": "0",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "absolute",
  "right": "0",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
}
`;

exports[`Select styled components Basic render: StyledRoot has correct default styles 1`] = `
Object {
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledRoot has correct styles for the SIZE.compact 1`] = `
Object {
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font200.fontFamily",
  "fontSize": "$theme.typography.font200.fontSize",
  "fontWeight": "$theme.typography.font200.fontWeight",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledRoot has correct styles for the TYPE.search 1`] = `
Object {
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledRoot has correct styles for the disabled state 1`] = `
Object {
  "boxSizing": "border-box",
  "fontFamily": "$theme.typography.font300.fontFamily",
  "fontSize": "$theme.typography.font300.fontSize",
  "fontWeight": "$theme.typography.font300.fontWeight",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledSearchIcon has correct default styles 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "100%",
  "left": "$theme.sizing.scale500",
  "position": "absolute",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSearchIcon has correct styles for the SIZE.compact 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "100%",
  "left": "$theme.sizing.scale500",
  "position": "absolute",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSearchIcon has correct styles for the TYPE.search 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "100%",
  "left": "$theme.sizing.scale500",
  "position": "absolute",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSearchIcon has correct styles for the disabled state 1`] = `
Object {
  "color": "$theme.colors.inputTextDisabled",
  "cursor": "not-allowed",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "100%",
  "left": "$theme.sizing.scale500",
  "position": "absolute",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSelectArrow has correct default styles 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSelectArrow has correct styles for the SIZE.compact 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSelectArrow has correct styles for the TYPE.search 1`] = `
Object {
  "color": "$theme.colors.foregroundAlt",
  "cursor": "pointer",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSelectArrow has correct styles for the disabled state 1`] = `
Object {
  "color": "$theme.colors.inputTextDisabled",
  "cursor": "not-allowed",
  "display": "inline-block",
  "fill": "currentColor",
  "height": "$theme.sizing.scale600",
  "width": "$theme.sizing.scale600",
}
`;

exports[`Select styled components Basic render: StyledSingleValue has correct default styles 1`] = `
Object {
  "boxSizing": "border-box",
  "height": "100%",
  "left": "0",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "absolute",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`Select styled components Basic render: StyledSingleValue has correct styles for the SIZE.compact 1`] = `
Object {
  "boxSizing": "border-box",
  "height": "100%",
  "left": "0",
  "lineHeight": "$theme.typography.font200.lineHeight",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale200",
  "position": "absolute",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`Select styled components Basic render: StyledSingleValue has correct styles for the TYPE.search 1`] = `
Object {
  "boxSizing": "border-box",
  "height": "100%",
  "left": "0",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale1000",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "absolute",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`Select styled components Basic render: StyledSingleValue has correct styles for the disabled state 1`] = `
Object {
  "boxSizing": "border-box",
  "height": "100%",
  "left": "0",
  "lineHeight": "$theme.typography.font300.lineHeight",
  "maxWidth": "100%",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "absolute",
  "textOverflow": "ellipsis",
  "top": "0",
  "whiteSpace": "nowrap",
  "wordWrap": "normal",
}
`;

exports[`Select styled components Basic render: StyledValueContainer has correct default styles 1`] = `
Object {
  "alignItems": "center",
  "boxSizing": "border-box",
  "display": "flex",
  "flexBasis": "0%",
  "flexGrow": 1,
  "flexShrink": 1,
  "flexWrap": "wrap",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledValueContainer has correct styles for the SIZE.compact 1`] = `
Object {
  "alignItems": "center",
  "boxSizing": "border-box",
  "display": "flex",
  "flexBasis": "0%",
  "flexGrow": 1,
  "flexShrink": 1,
  "flexWrap": "wrap",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale200",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale200",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledValueContainer has correct styles for the TYPE.search 1`] = `
Object {
  "alignItems": "center",
  "boxSizing": "border-box",
  "display": "flex",
  "flexBasis": "0%",
  "flexGrow": 1,
  "flexShrink": 1,
  "flexWrap": "wrap",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale1000",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "relative",
}
`;

exports[`Select styled components Basic render: StyledValueContainer has correct styles for the disabled state 1`] = `
Object {
  "alignItems": "center",
  "boxSizing": "border-box",
  "display": "flex",
  "flexBasis": "0%",
  "flexGrow": 1,
  "flexShrink": 1,
  "flexWrap": "wrap",
  "overflow": "hidden",
  "paddingBottom": "$theme.sizing.scale400",
  "paddingLeft": "$theme.sizing.scale500",
  "paddingRight": "0",
  "paddingTop": "$theme.sizing.scale400",
  "position": "relative",
}
`;

exports[`Select styled components StyledOptionContent styles: StyledOptionContent has correct styles when selected 1`] = `
Object {
  "color": "$theme.colors.primary400",
  "cursor": "pointer",
  "fontWeight": "bold",
}
`;
